--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "description": "An electron-vue project",
   "main": "./dist/main.js",
   "dependencies": {
+    "import-lazy": "^2.1.0",
     "lodash": "^4.17.4",
     "mathjs": "^3.9.3",
     "vue": "^2.1.10",
